fix css and key props

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -24,17 +24,17 @@ body{
   color: #313131;
 }
 #App{
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: stretch;
   box-shadow: 0 6px 15px rgba(36,37,38,0.08);
-  background:#f9f9f9;
+  background:#f9f9f9; */
   height: 100%;
   width: 100%;
-  margin: 0;
+  /* margin: 0;
   border-radius: 4px;
-  overflow: hidden;
+  overflow: hidden; */
 }
 #main{
   position: relative;
@@ -44,6 +44,8 @@ body{
   display: grid;
   grid-template-rows: 60px 1fr 60px;
   background: #fafafa;
+  height: 100%;
+  border-radius: 4px;
 }
 header{
   display: flex;
@@ -52,6 +54,7 @@ header{
   align-items: center;
   background-color: #fff;
   padding: 18px 16px;
+  border-radius: 4px 4px 0 0;
 }
 header h3{
   margin: 0;
@@ -69,6 +72,7 @@ header button{
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  border-radius: 0 0 4px 4px;
 }
 #container, #contacts{
   overflow-x: hidden;
