--- a/src/css/App.css
+++ b/src/css/App.css
@@ -24,21 +24,17 @@ body{
   color: #313131;
 }
 #App{
-  /* display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: stretch;
-  box-shadow: 0 6px 15px rgba(36,37,38,0.08);
-  background:#f9f9f9; */
   height: 100%;
   width: 100%;
-  /* margin: 0;
-  border-radius: 4px;
-  overflow: hidden; */
 }
 #main{
   position: relative;
   flex: 100%;
+}
+.loading{
+  width: 100%;
+  height: 100%;
+  background: #fff url(./loading.gif) center center no-repeat;
 }
 .card{
   display: grid;
@@ -111,12 +107,6 @@ li{
 }
 #contacts li:nth-child(even){
   background: rgba(0, 0, 0, .020)
-}
-#contacts li.hide{
-  display: none
-}
-#contacts li.show{
-  display: flex
 }
 input{
   background: #f5f5f5;
