--- a/src/css/App.css
+++ b/src/css/App.css
@@ -97,7 +97,6 @@ li{
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  position: relative;
   padding: 1rem 0;
   border-bottom: #eee 1px solid;
 }
@@ -189,6 +188,20 @@ button:hover{
 }
 #main section.show{
   bottom: 0;
+}
+.edit-card {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  background: #fff;
+  padding: 2rem 1rem;
+  border-radius: 4px;
+}
+.edit-card.active{
+  display: block;
 }
 @media only screen and (min-width: 769px){
   #App{
