--- a/src/css/App.css
+++ b/src/css/App.css
@@ -18,7 +18,7 @@ body{
   font-family: 'Karla', sans-serif;
   padding: 0;
   margin: 0;
-  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+  background: #f6f6f6;
   overflow: hidden;
   position: relative;
   color: #313131;
@@ -26,6 +26,19 @@ body{
 #App{
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.login-box{
+  width: 50%;
+  max-width: 350px;
+  margin: 0 auto;
+  background: #fff;
+  padding: 2rem;
+  box-shadow: 1px 1px 20px rgba(0,0,0,.1);
 }
 #main{
   position: relative;
@@ -58,6 +71,7 @@ header h3{
 }
 header button{
   margin: 0;
+  flex: 10%;
 }
 .footer{
   color: #f9f9f9;
