--- a/src/css/App.css
+++ b/src/css/App.css
@@ -34,11 +34,18 @@ body{
 }
 .login-box{
   width: 50%;
-  max-width: 350px;
-  margin: 0 auto;
+  max-width: 430px;
+  margin: 0 auto 20px;
+  border-radius: 8px;
   background: #fff;
-  padding: 2rem;
   box-shadow: 1px 1px 20px rgba(0,0,0,.1);
+}
+.login-box header h3 {
+  text-align: center;
+  line-height: 1.5;
+}
+.login-box form{
+  padding: 40px;
 }
 #main{
   position: relative;
@@ -70,7 +77,7 @@ header h3{
   font-weight: normal
 }
 header button{
-  margin: 0;
+  margin: 0 0 0 .5rem;
   flex: 10%;
 }
 .footer{
@@ -187,6 +194,7 @@ button:hover{
 #main section #toggle{
   padding: unset;
   width: 30px;
+  max-width: 30px;
   height: 30px;
   background: #313131;
   color: #f5f5f5
